pushing responsiveness and last updated content

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   font-family: Montserrat, sans-serif;
 }
+p{
+  font-family: Montserrat, sans-serif;
+}
 
 .logo {
   height: 6em;
