--- a/src/pages/Our-leadership/Team.css
+++ b/src/pages/Our-leadership/Team.css
@@ -14,3 +14,18 @@ line-height: 43.88px;
 .Team-container-wrapper .container{
     gap: 40px;
 }
+
+.specific-team-member-photo{
+    max-height: 400px;
+}
+
+@media (max-width: 768px){
+   .about-hero-section .heading{
+    font-size: 40px;
+   }
+   .Team-container-wrapper .header-element h1{
+    font-size: 32px;
+    line-height: 38.88px;
+    
+}
+}
