--- a/src/pages/Sustainability/Sastainability.css
+++ b/src/pages/Sustainability/Sastainability.css
@@ -1,9 +1,9 @@
 
 
-.environment-section, .community-section{
+.environment-section, .community-section, .our-approach-section, .community-section1{
   overflow-x: hidden;
 }
-.environment-section .row, .community-section .row, .goverance .row{
+.environment-section .row, .community-section .row, .goverance .row, .our-approach-section .row, .goverance1 .row, .community-section1 .row{
 position: relative;
 
 }
@@ -17,16 +17,27 @@ left: 50%;
 transform: translate(-50%, -50%); 
 
 }
+.below-hero-wrappr{
+  background-color: #F2F2F2;
+}
 
+.sust-container .row{
+  flex-wrap: nowrap;
+  gap: 50px;
+}
 
 .row .bg-section{
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
-min-height: 300px;
+min-height: 500px;
 }
 .environment-section .bg-section{
 background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Sustainabilty.webp');
+
+}
+.our-approach-section .bg-section{
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/Tailings-1.webp');
 
 }
 
@@ -42,7 +53,7 @@ padding: 40px 100px 40px 60px;
 
 }
 
-.section-header{
+.section-header, .sust-upper-content h2{
 
 font-weight: 700;
 font-size: 36px;
@@ -76,28 +87,50 @@ color: var(--trinity-dark);
 
 .has-content1{
 
-padding-top: 100px;
+padding-top: 40px;
 padding-right: 100px;
-padding-bottom: 102px;
-padding-left: 100px;
+padding-bottom: 40px;
+padding-left: 60px;
+
+}
+.has-content1 p{
+  color: var(--trinity-white);
+}
+
+/* Our approach to Water management */
+.water-man{
+     background-image: url('https://trinity-metals.com/wp-content/uploads/2022/09/VALUES.jpg');
 
 }
 
+
 /* Community section styles */
-.community-bg-section{
-  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Community.webp');
+.community-bg-section, .water-man, .community-bg-section1{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 300px;
+  min-height: 500px;
 }
+.community-bg-section{
+     background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/approach-to-gov.webp');
+
+}
+
+.community-bg-section1{
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/approach-to-tailings.webp');
+}
+
+
 .community-content{
-padding: 100px 70px 102px 16%;
+padding: 40px 70px 40px 16%;
+display: flex;
+flex-direction: column;
+justify-content: center;
 
 background-color: var(--trinity-green);
 }
 
-.goverance .row{
+.goverance .row, .goverance1 .row{
 background-color: var(--trinity-blue);
 }
 .header009, .header0019{
@@ -111,10 +144,12 @@ letter-spacing: 0%;
 color: var(--trinity-white);
 }
 
-.community-content .content-achievement, .goverance .content-achievement{
+.community-content .content-achievement, .goverance .content-achievement, .goverance1 .content-achievement{
  padding-left: 30px;
  list-style-type: none;
 }
+
+
 .content-achievement li{
 font-weight: 500;
 font-size: 13px;
@@ -122,7 +157,7 @@ line-height: 24px;
 letter-spacing: 0%;
 color: var(--trinity-white);
 position: relative;
-padding-bottom: 18px;
+/* padding-bottom: 18px; */
 
 }
 .content-achievement li::after{
@@ -143,11 +178,16 @@ background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Con
 }
 
 /* Governance section styles */
+.goverance1 .bg-section{
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Rotongo-women.jpg');
+}
 .goverance .bg-section{
-background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Governance-bg.webp');
+background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/Governance.webp');
 }
 
-.goverance .content-achievement li::after{
+
+
+.goverance .content-achievement li::after, .goverance1 .content-achievement li::after{
 background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Container-6.svg');
 
 }
@@ -166,6 +206,8 @@ gap: 30px;
 .reports-container{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
+column-gap: 30px;
+row-gap: 20px;
 }
 .reports-container .single-report{
 border: 1px solid #DDDDDD;
@@ -212,7 +254,7 @@ padding-left: 30px;
 background-color: 
 #F3F3F3;
 text-decoration: none;
-
+cursor: pointer;
 
 }
 .download-button span{
@@ -250,14 +292,16 @@ color: var(--trinity-white)!important;
 }
 @media (max-width: 767px) {
 .environment-section{
-  padding-top: 40px;
+  padding-top: 20px;
   
 }
 .content-section{
  width: 100%;
 }
-.has-content {
-  padding: 40px 50px 40px 50px;
+.has-content, .has-content1{
+  
+    padding: 40px 35px 40px 30px;
+
 }
 .inner-wrapper .heading {
   font-size: 46px;
@@ -265,17 +309,24 @@ color: var(--trinity-white)!important;
 .community-content {
   padding: 40px 52px 40px 8%;
 }
-.community-section .row{
+.community-section .row, .community-section1 .row{
   flex-direction: column-reverse;
 }
-.has-content1{
-  padding: 40px;
-}
+
 .reports-container{
   grid-template-columns: repeat(1, 1fr);
 }
 .policies-section-wrapper{
   padding: 40px 15px;
 }
-
+.sus-icon{
+  visibility: hidden;
+}
+.goverance .bg-section, .community-bg-section, .environment-section .bg-section, .goverance1 .bg-section, .community-bg-section1{
+  height: 350px;
+}
+.sust-container .row{
+  flex-wrap: wrap;
+  gap: 30px;
+}
 }
