--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -82,6 +82,10 @@
   border-radius: 5px;
 }
 
+.include-location{
+  column-gap: 50px;
+}
+
 /* Quick Links styles */
 .the-links {
   display: flex;
@@ -270,5 +274,14 @@ line-height: 15.85px;
     flex-direction: column;
     gap: 20px;
   }
-  
+  .include-location{
+    flex-direction: column;
+  }
+  .mine-site-location{
+    gap: 10px;
+    padding: 20px 0 0 0;
+  }
+  .quick-links{
+    padding-left: revert;
+  }
 }
