--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -393,10 +393,12 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 30px;
+      
     }
     .team-member-photo{
-        min-height: 330px;
+        max-height: 330px;
         object-fit: cover;
+        object-position: top;
         width: 100%;
     }
     .team-member-details{
@@ -411,12 +413,47 @@
     
     .team-member-details .view-member-desc{
         padding-right: 20px;
-        opacity: 0;
+        cursor: pointer;
     }
-    .single-team-member:hover .view-member-desc{
+    @media (min-width: 1024px) {
+        .single-team-member:hover .view-member-desc{
         opacity: 1;
+      }
+      .team-member-details .view-member-desc{
+       
+        opacity: 0;
+       
+    }
     }
     
+
+
+    /* A team member popup styles */
+    .a-member-desc{
+        display: flex;
+        column-gap: 50px;
+        padding: 30px;
+    }
+    @media (max-width: 768px) {
+        .a-member-desc{
+            flex-direction: column;
+            padding: 0!important;
+        }
+        .a-member-desc .text-content, .a-member-desc .a-member-image{
+            width: 100%!important;
+        }
+    }
+    .a-member-desc .text-content {
+        width: 60%;
+    }
+    .a-member-desc .a-member-image{
+        width: 40%;
+    }
+    .a-member-desc .a-member-image img{
+        min-height: 300px;
+        object-fit: cover;
+
+    }
     
     .member-name, .member-post{
         color: var(--trinity-dark);
