--- a/src/pages/Contact-Us/Contact.css
+++ b/src/pages/Contact-Us/Contact.css
@@ -122,7 +122,7 @@ padding: 15.5px 28px 15.5px 28px!important;
  .field-title{
     align-self: flex-start;
 }
-.display-options
+
 
 .field-wrapper .select-inquiry{
     background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Icon-2.svg');
@@ -181,7 +181,7 @@ color: var(--trinity-white);
     background-color: #F4F4F4;
     width: Fixed (251px)px;
 
-    padding: 05px 28px 20px 28px;
+    padding: 05px 20px 20px 20px;
     border-radius: 5px; 
     opacity: 0;
     transition: margin-right 0.5s ease-out, opacity 0.5s ease-out;
@@ -192,7 +192,11 @@ color: var(--trinity-white);
     margin-right: auto;
     opacity: 1;
   }
-.display-options label:nth-child(2){
+  .display-options .mb-3 .form-check:nth-child(2){
+    padding-top: 15px;
+  }
+
+.display-options .mb-3 .form-check:nth-child(1){
     border-bottom: 2px solid #D5DDDD;
     padding-bottom: 15px;
     
@@ -217,6 +221,13 @@ color: var(--trinity-white);
 
 .contain-select{
     position: relative;
+}
+
+.form-check-input:checked[type=radio]{
+    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Ellipse-blue.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: 8px;
 }
 
 
@@ -247,4 +258,62 @@ color: var(--trinity-dark);
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.form-check-inline{
+    display: flex;
+    justify-content: space-between;
+     flex-direction: row-reverse;
+}
+.form-check{
+    padding-left: 0;
+}
+ #inline-radio-1, #inline-radio-2{
+    padding: 8px 4px!important;
+    border: 1px solid #00A4E4;
+}
+
+@media (max-width: 768px) {
+    .get-in-touchSection .container .row{
+        padding: 10px 10px 0 0;
+    }
+    .get-in-touchSection .left, .get-in-touchSection .right{
+        width: 100%;
+    }
+    .get-in-touchSection .right{
+        padding: 5px 15px 15px 15px;
+    }
+    .get-in-touchSection .left{
+        padding-right: 0;
+    }
+    .contact-details{
+        padding: 25px 20px;
+    }
+    .location-wrapper .row {
+        gap: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .location-wrapper{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .location-wrapper .location-name h4{
+        padding-bottom: 15px;
+    }
+    .form-wrapper .field-wrapper{
+        flex-direction: column;
+    }
+    .display-options{
+        width: 100%;
+    }
+    .display-options label:nth-child(1) {
+        width: 100%;
+    }
+    .display-options img{
+        width: 15px;
+    }
+    .display-options .mb-3 .form-check{
+        margin-right: 0;
+    }
 }
