--- a/src/pages/Investor/Latest-news/Latest-news.css
+++ b/src/pages/Investor/Latest-news/Latest-news.css
@@ -41,3 +41,50 @@ line-height: 78.02px;
 letter-spacing: 0%;
 text-align: center;
 }
+
+/* Pagination Styles */
+.pagination{
+    gap: 10px;
+    padding-top: 30px;
+}
+.page-numbers-wrapper{
+    display: flex;
+    gap: 7px;
+}
+.page-number, .pagination-btn{
+  
+border-radius: 14px;
+padding: 10px 18px;
+cursor: pointer;
+background-color: var(--trinity-white);
+
+font-weight: 400;
+font-size: 15px;
+line-height: 20px;
+letter-spacing: 0%;
+text-align: center;
+color: var(--trinity-dark);
+
+
+}
+.page-number.active{
+    background-color: var(--trinity-blue);
+    color: var(--trinity-white);
+
+}
+.pagination-btn:hover{
+    border: none;
+}
+.pagination-btn:disabled{
+ opacity: 0.4;
+ background-color: var(--trinity-white);
+}
+
+@media(max-width: 768px){
+    .latest-news{
+        grid-template-columns: 1fr;
+    }
+    .latest-news-wrapper .col-md-8{
+        padding-bottom: 60px;
+    }
+}
