--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -145,6 +145,10 @@
         background: rgba(0, 0, 0, 0.4);
     
     }
+
+      .our-mission:hover::after, .our-vision:hover::after{
+        opacity: 0;
+      }
     
     .our-mission{
         background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Sustainabilty.webp');
@@ -188,6 +192,7 @@
         background-image: none;
         background-color: var(--trinity-blue)!important;
     }
+    
     .our-vision:hover{
         background-image: none;
         background-color: var(--trinity-green)!important;
