--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -143,7 +143,7 @@ text-decoration: none;
 }
 
 .basic-intro-left{
-  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Trinity-mines.webp');
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/3_24.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -206,7 +206,7 @@ text-align: left;
     padding-left: 60px;
     padding-bottom: 30px;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
     /* padding-top: 120px; */
     position: relative;
     /* padding-right: 11%;*/
@@ -444,7 +444,7 @@ color: var(--trinity-dark);
 
 /* Our porject section styles */
 .the-top-bg{
-  background-image: url('../../../public/asset/about-trinity.webp');
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/06/6aa6e8a89ba55ad7562c41443993211469bc14d6-1.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -487,8 +487,11 @@ color: var(--trinity-dark);
 } */
 @media (max-width: 768px) {
   .our-porject-wrapper{
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .container-holder{
+      margin-top: -36vh!important;
   }
 }
 .container-holder{
@@ -660,7 +663,7 @@ color: #001721;
 }
 @media (max-width: 767px) {
   .Sastainability-right{
-    padding: 0;
+      padding: 40px 15px;
   }
   .Sastainability-image{
     width: 100%;
@@ -668,7 +671,7 @@ color: #001721;
   }
   .Sastainability-content{
     flex-direction: column;
-    gap: 50px;
+    gap: 0px;
   }
   .sastainability-section-wrapper{
     padding-top: 60px;
@@ -797,7 +800,7 @@ text-align: center;
   border-radius: 5px
 }
 .play-button{
-  
+  cursor: pointer;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
