--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -510,7 +510,7 @@ color: var(--trinity-dark);
   
 }
 
-@media (max-width: 500px){
+@media (max-width: 600px){
   .sectionTops{
     flex-direction: column;
     align-items: start
@@ -522,6 +522,17 @@ color: var(--trinity-dark);
   }
   .sectionTops .button-element .view-projects {
     padding: 10px;
+  }
+  .hero-section-content-wrapper br{
+    display: inline;
+  }
+  .section-header, .sust-upper-content h2{
+    font-size: 30px!important;
+    line-height: 1.3em!important;
+  }
+  .section-desc{
+    font-size: 22px!important;
+    line-height: 1.2em!important;
   }
 
 }
@@ -781,6 +792,11 @@ text-align: center;
     width: 100%;
     min-height: 400px;
   }
+  .video-player-fromyoutbe {
+        height: 400px!important;
+
+  }
+
 }
 .video-wrapper, .image-wrapper{
   width: 50%
@@ -805,6 +821,11 @@ text-align: center;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+}
+
+.video-player-fromyoutbe{
+  height: 100%;
+  width: 100%;
 }
 
 
