--- a/src/pages/TheProjects/Projects.css
+++ b/src/pages/TheProjects/Projects.css
@@ -41,13 +41,13 @@ color: var(--trinity-dark);
 padding-bottom: 20px;
 
 }
-.projects-description p{
+.projects-description li{
     
 font-size: 16px;
 font-weight: 500;
 line-height: 19px;
 text-align: left;
-
+margin-bottom: 15px;
 
 }
 .projects-cards-wrapper{
