--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -72,7 +72,7 @@
 }
 .newsletterSubmitBtn {
   background-color: var(--trinity-dark)!important;
-  width: 22%;
+  width: 35%;
   font-size: 16px;
   font-weight: 700!important;
   line-height: 19.5px;
@@ -292,5 +292,13 @@ line-height: 15.85px;
     flex-direction: column;
     gap: 14px;
     padding-bottom: 20px;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1334px) {
+  .contact-info-section{
+    gap: 30px;
+    flex-direction: column;
+
   }
 }
