--- a/src/pages/TheProjects/Projects.css
+++ b/src/pages/TheProjects/Projects.css
@@ -41,7 +41,7 @@ color: var(--trinity-dark);
 padding-bottom: 20px;
 
 }
-.projects-description li{
+.projects-description p{
     
 font-size: 16px;
 font-weight: 500;
