--- a/src/pages/Our-leadership/Team.css
+++ b/src/pages/Our-leadership/Team.css
@@ -3,12 +3,12 @@
     padding-top: 20px;
     padding-bottom: 80px;
 }
-.header-element h1{
+.header-element h2{
     
 font-size: 36px;
 font-weight: 700;
 line-height: 43.88px;
-
+margin-bottom: 0;
 
 }
 .Team-container-wrapper .container{
