--- a/src/pages/Projects/Project.css
+++ b/src/pages/Projects/Project.css
@@ -31,7 +31,7 @@
    margin-top: -100px;
    z-index: 1;
 }
-.project-content-wrapper .project-title-element h1, .no-report-found h1{
+.project-content-wrapper .project-title-element h1, .no-report-found h1, .project-content-wrapper h2{
     
     font-size: 36px;
     font-weight: 700;
